// NOTICE
//
// This software (or technical data) was produced for the U.S. Government
// under contract, and is subject to the Rights in Data-General Clause
// 52.227-14, Alt. IV (DEC 2007).
//
// Copyright 2017 The MITRE Corporation. All Rights Reserved.


// Copyright 2017 The MITRE Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package org.mitre.mpf.wfm.buffers;

import "algorithmproperty.proto";

option java_outer_classname = "Tracking";

message TrackRequest {
    required int64 request_id  = 1;
    required string video_uri  = 2;
    optional int32 start_index = 3;
    optional int32 stop_index  = 4;
    repeated AlgorithmProperty algorithm_property = 5;
}

message TrackResponse {
    required int64 request_id = 1;
    message ObjectLocation {
        required int32 x_left_upper = 1;
        required int32 y_left_upper = 2;
        required int32 width = 3;
        required int32 height = 4;
        optional float confidence = 5;
    }
    message ObjectTrack {
        required int32 start_frame = 1;
        required int32 stop_frame = 2;
        repeated ObjectLocation objects = 4;
    }
    repeated ObjectTrack object_tracks = 2;
}
